syntax = "proto3";

package krathub.service.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "auth/service/v1/auth.proto";

option go_package = "github.com/horonlee/krathub/api/gen/go/krathub/service/v1;krathubv1";

// Auth HTTP 服务 - 用于 OpenAPI 生成
service AuthService {
  rpc SignupByEmail(auth.service.v1.SignupByEmailRequest) returns (auth.service.v1.SignupByEmailReply) {
    option (google.api.http) = {
      post: "/v1/auth/signup/using-email"
      body: "*"
    };
  }

  rpc LoginByEmailPassword(auth.service.v1.LoginByEmailPasswordRequest) returns (auth.service.v1.LoginByEmailPasswordReply) {
    option (google.api.http) = {
      post: "/v1/auth/login/email-password"
      body: "*"
    };
  }

  rpc RefreshToken(auth.service.v1.RefreshTokenRequest) returns (auth.service.v1.RefreshTokenReply) {
    option (google.api.http) = {
      post: "/v1/auth/refresh-token"
      body: "*"
    };
  }

  rpc Logout(auth.service.v1.LogoutRequest) returns (auth.service.v1.LogoutReply) {
    option (google.api.http) = {
      post: "/v1/auth/logout"
      body: "*"
    };
  }
}
