syntax = "proto3";
package kratos.api;

option go_package = "krathub/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  App app = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}

message App {
  string env = 1; // dev test prod
  Jwt jwt = 2; // JWT配置
}

message Jwt{
  string secret_key = 1; // JWT密钥
  int32 expire = 2; // JWT过期时间，单位秒
  string issuer = 3; // JWT签发者
  string audience = 4;
}